// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerTabs should render connection step 1`] = `
<div>
  <div>
    <ul
      class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
    >
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
    </ul>
    <div
      class="mt-8"
      data-testid="LedgerTabs"
    >
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          class="space-y-8"
          data-testid="ImportWallet__first-step"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Select a Cryptoasset
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Select a cryptoasset to import your existing wallet address
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="network"
            >
              Cryptoasset
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="ImportWallet__network-menu"
                data-testid="SelectNetwork"
                role="combobox"
              >
                <label
                  for="ImportWallet__network-input"
                  id="ImportWallet__network-label"
                />
                <div
                  class="InputGroup-sc-1obbdqe-3 bgPpWR"
                  data-testid="SelectNetworkInput"
                >
                  <div
                    class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
                  >
                    <div
                      class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                      data-testid="SelectNetworkInput__network"
                    />
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__network-menu"
                    aria-labelledby="ImportWallet__network-label"
                    autocomplete="off"
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                    data-testid="SelectNetworkInput__input"
                    id="ImportWallet__network-input"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__network-label"
                class="hidden"
                id="ImportWallet__network-menu"
                role="listbox"
              />
            </div>
          </fieldset>
        </section>
      </div>
    </div>
    <div
      class="flex justify-between mt-10"
    >
      <div />
      <div
        class="flex space-x-3"
      >
        <button
          class="Button-mdtvtf-0 kgwVKi"
          data-testid="Paginator__back-button"
          disabled=""
          type="button"
        >
          Back
        </button>
        <button
          class="Button-mdtvtf-0 kgwVKi"
          data-testid="Paginator__continue-button"
          disabled=""
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerTabs should render scan step with failing fetch 1`] = `
<div>
  <div>
    <ul
      class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
    >
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
    </ul>
    <div
      class="mt-8"
      data-testid="LedgerTabs"
    >
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          class="space-y-8"
          data-testid="LedgerScanStep"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Accounts
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Select the addresses that you want to import
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="network"
            >
              Cryptoasset
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="ImportWallet__network-menu"
                data-testid="SelectNetwork"
                role="combobox"
              >
                <label
                  for="ImportWallet__network-input"
                  id="ImportWallet__network-label"
                />
                <div
                  class="InputGroup-sc-1obbdqe-3 bgPpWR"
                  data-testid="SelectNetworkInput"
                >
                  <div
                    class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK px-4"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                      data-testid="SelectNetworkInput__network"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__network-menu"
                    aria-labelledby="ImportWallet__network-label"
                    autocomplete="off"
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 pl-15"
                    data-testid="SelectNetworkInput__input"
                    disabled=""
                    id="ImportWallet__network-input"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__network-label"
                class="hidden"
                id="ImportWallet__network-menu"
                role="listbox"
              />
            </div>
          </fieldset>
          <div
            class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
            role="table"
          >
            <table
              cellpadding="0"
              class="table-auto"
            >
              <thead>
                <tr
                  class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                  role="row"
                >
                  <th
                    class="relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top "
                    >
                      <div>
                        Wallet
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-bdfBwQ gvFuTp"
                          height="5"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top justify-end"
                    >
                      <div>
                        Balance
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-bdfBwQ gvFuTp"
                          height="5"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-1"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top justify-center"
                    >
                      <div>
                        <input
                          class="Checkbox-sc-17gwqiq-0 cZgJoF"
                          color="success"
                          data-testid="LedgerScanStep__select-all"
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                  data-testid="TableRow"
                >
                  <td>
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims space-x-4"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kiWPH"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="DSyG9hK9CE8eyfddUoEvsga4kNVQLdw2ve"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                            title="DSyG9hK9CE8eyfddUoEvsga4kNVQLdw2ve"
                          />
                        </div>
                      </div>
                      <div
                        class="inline-flex items-center"
                      >
                        <span
                          class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          DSyG9h … Ldw2ve
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="w-64"
                  >
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm justify-end font-semibold"
                    >
                      <div
                        class="flex items-center space-x-3 text-theme-danger-400"
                        data-testid="LedgerScanStep__amount-error"
                      >
                        <div
                          class="Circle-uw7h4j-0 blBpcG border-theme-danger-400"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              cross-slim.svg
                            </svg>
                          </div>
                        </div>
                        <span>
                          Error
                        </span>
                      </div>
                    </div>
                  </td>
                  <td>
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-center"
                    >
                      <input
                        class="Checkbox-sc-17gwqiq-0 cZgJoF"
                        color="success"
                        disabled=""
                        type="checkbox"
                      />
                    </div>
                  </td>
                </tr>
                <tr
                  class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                  data-testid="TableRow"
                >
                  <td>
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims space-x-4"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kiWPH"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                            title="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                          />
                        </div>
                      </div>
                      <div
                        class="inline-flex items-center"
                      >
                        <span
                          class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          DFJ5Z5 … LZkc6T
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="w-64"
                  >
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm justify-end font-semibold"
                    >
                      <div
                        class="flex items-center space-x-3 text-theme-danger-400"
                        data-testid="LedgerScanStep__amount-error"
                      >
                        <div
                          class="Circle-uw7h4j-0 blBpcG border-theme-danger-400"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              cross-slim.svg
                            </svg>
                          </div>
                        </div>
                        <span>
                          Error
                        </span>
                      </div>
                    </div>
                  </td>
                  <td>
                    <div
                      class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-center"
                    >
                      <input
                        class="Checkbox-sc-17gwqiq-0 cZgJoF"
                        color="success"
                        disabled=""
                        type="checkbox"
                      />
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <button
              class="Button-mdtvtf-0 kgwVKi w-full"
              data-testid="LedgerScanStep__view-more"
              disabled=""
              type="button"
            >
              <span>
                View More
              </span>
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      class="flex justify-between mt-10"
    >
      <div>
        <button
          class="Button-mdtvtf-0 cyPweQ"
          data-testid="Paginator__retry-button"
          type="button"
        >
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              reset.svg
            </svg>
          </div>
          <span>
            Retry
          </span>
        </button>
      </div>
      <div
        class="flex space-x-3"
      >
        <button
          class="Button-mdtvtf-0 cyPweQ"
          data-testid="Paginator__back-button"
          type="button"
        >
          Back
        </button>
        <button
          class="Button-mdtvtf-0 kgwVKi"
          data-testid="Paginator__continue-button"
          disabled=""
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;
